# PointerAnalysis

./: CMakeLists.txt  README.md  test  test.bc  test1.ll  test2.ll  test3.ll  test4.ll  test6.ll  test7.ll  test8.ll  test9.ll
PointerAnalysis/: CMakeLists.txt  pointer.cpp  pointer_1.cpp
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/PointerAnalysis/: Makefile  cmake_install.cmake
preronaTest/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
